Refactor injection manager related code.
Mostly formatting and renaming. Specifically renamed referenced of
"JCDI" to "CDI".

Signed-off-by: Arjan Tijms <arjan.tijms@gmail.com>