@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2022, 2022 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -16,20 +17,27 @@
 
 package com.sun.enterprise.container.common.impl.managedbean;
 
+import static com.sun.enterprise.deployment.LifecycleCallbackDescriptor.CallbackType.POST_CONSTRUCT;
+import static com.sun.enterprise.deployment.LifecycleCallbackDescriptor.CallbackType.PRE_DESTROY;
+import static java.security.AccessController.doPrivileged;
+import static java.util.Collections.synchronizedMap;
+import static java.util.logging.Level.FINE;
+import static org.glassfish.internal.deployment.Deployment.APPLICATION_LOADED;
+import static org.glassfish.internal.deployment.Deployment.APPLICATION_UNLOADED;
+import static org.glassfish.internal.deployment.Deployment.DEPLOYMENT_FAILURE;
+
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.logging.Level;
 import java.util.logging.Logger;
 
-import jakarta.inject.Inject;
 import javax.naming.InitialContext;
+import javax.naming.NamingException;
 
 import org.glassfish.api.admin.ProcessEnvironment;
 import org.glassfish.api.admin.ProcessEnvironment.ProcessType;
@@ -42,11 +50,11 @@ import org.glassfish.hk2.api.ServiceLocator;
 import org.glassfish.hk2.runlevel.RunLevel;
 import org.glassfish.internal.api.PostStartupRunLevel;
 import org.glassfish.internal.data.ApplicationInfo;
-import org.glassfish.internal.deployment.Deployment;
 import org.jvnet.hk2.annotations.Service;
 
+import com.sun.enterprise.container.common.spi.CDIService;
+import com.sun.enterprise.container.common.spi.CDIService.CDIInjectionContext;
 import com.sun.enterprise.container.common.spi.InterceptorInvoker;
-import com.sun.enterprise.container.common.spi.JCDIService;
 import com.sun.enterprise.container.common.spi.JavaEEInterceptorBuilder;
 import com.sun.enterprise.container.common.spi.JavaEEInterceptorBuilderFactory;
 import com.sun.enterprise.container.common.spi.ManagedBeanManager;
@@ -59,31 +67,31 @@ import com.sun.enterprise.deployment.BundleDescriptor;
 import com.sun.enterprise.deployment.EjbBundleDescriptor;
 import com.sun.enterprise.deployment.EjbDescriptor;
 import com.sun.enterprise.deployment.JndiNameEnvironment;
-import com.sun.enterprise.deployment.LifecycleCallbackDescriptor;
 import com.sun.enterprise.deployment.ManagedBeanDescriptor;
 import com.sun.enterprise.deployment.WebBundleDescriptor;
 import com.sun.logging.LogDomains;
 
+import jakarta.inject.Inject;
+
 /**
  */
-@Service(name="ManagedBeanManagerImpl")
-@RunLevel(value=PostStartupRunLevel.VAL, mode=RunLevel.RUNLEVEL_MODE_NON_VALIDATING)
+@Service(name = "ManagedBeanManagerImpl")
+@RunLevel(value = PostStartupRunLevel.VAL, mode = RunLevel.RUNLEVEL_MODE_NON_VALIDATING)
 public class ManagedBeanManagerImpl implements ManagedBeanManager, PostConstruct, EventListener {
 
-     private static final Logger _logger = LogDomains.getLogger(ManagedBeanManagerImpl.class,
-            LogDomains.CORE_LOGGER);
+    private static final Logger _logger = LogDomains.getLogger(ManagedBeanManagerImpl.class, LogDomains.CORE_LOGGER);
 
     @Inject
     private ComponentEnvManager compEnvManager;
 
     @Inject
-    private InjectionManager injectionMgr;
+    private InjectionManager injectionManager;
 
     @Inject
     private GlassfishNamingManager namingManager;
 
     @Inject
-    private ServiceLocator habitat;
+    private ServiceLocator serviceLocator;
 
     @Inject
     private Events events;
@@ -93,132 +101,107 @@ public class ManagedBeanManagerImpl implements ManagedBeanManager, PostConstruct
 
     private ProcessType processType;
 
-    // Keep track of contexts for managed bean instances instantiated via JCDI
-    private Map<BundleDescriptor, Map<Object, JCDIService.JCDIInjectionContext>> jcdiManagedBeanInstanceMap =
-            new HashMap<BundleDescriptor, Map<Object, JCDIService.JCDIInjectionContext>>();
+    // Keep track of contexts for managed bean instances instantiated via CDI
+    private Map<BundleDescriptor, Map<Object, CDIInjectionContext>> cdiManagedBeanInstanceMap = new HashMap<>();
 
     // Used to hold managed beans in app client container
-    private Map<String, NamingObjectProxy> appClientManagedBeans = new HashMap<String, NamingObjectProxy>();
+    private Map<String, NamingObjectProxy> appClientManagedBeans = new HashMap<>();
 
+    @Override
     public void postConstruct() {
         events.register(this);
         processType = processEnv.getProcessType();
     }
 
+    @Override
     public void event(Event event) {
+        if (event.is(APPLICATION_LOADED)) {
+            ApplicationInfo info = APPLICATION_LOADED.getHook(event);
 
-         if (event.is(Deployment.APPLICATION_LOADED) ) {
-             ApplicationInfo info =  Deployment.APPLICATION_LOADED.getHook(event);
+            loadManagedBeans(info);
+            registerAppLevelDependencies(info);
 
-             loadManagedBeans(info);
-
-             registerAppLevelDependencies(info);
-
-         } else if( event.is(Deployment.APPLICATION_UNLOADED) ) {
-
-             ApplicationInfo info =  Deployment.APPLICATION_UNLOADED.getHook(event);
-             Application app = info.getMetaData(Application.class);
-
-             doCleanup(app);
-
-         } else if( event.is(Deployment.DEPLOYMENT_FAILURE) ) {
-
-             Application app = Deployment.DEPLOYMENT_FAILURE.getHook(event).getModuleMetaData(Application.class);
-
-             doCleanup(app);
-
-         }
+        } else if (event.is(APPLICATION_UNLOADED)) {
+            doCleanup(APPLICATION_UNLOADED.getHook(event).getMetaData(Application.class));
+        } else if (event.is(DEPLOYMENT_FAILURE)) {
+            doCleanup(DEPLOYMENT_FAILURE.getHook(event).getModuleMetaData(Application.class));
+        }
     }
 
     private void doCleanup(Application app) {
-
-        if( app != null ) {
-
+        if (app != null) {
             unloadManagedBeans(app);
 
             unregisterAppLevelDependencies(app);
         }
-
     }
 
     private void registerAppLevelDependencies(ApplicationInfo appInfo) {
-
         Application app = appInfo.getMetaData(Application.class);
-
-        if( app == null ) {
+        if (app == null) {
             return;
         }
 
         try {
             compEnvManager.bindToComponentNamespace(app);
-        } catch(Exception e) {
-            throw new RuntimeException("Error binding app-level env dependencies " +
-                    app.getAppName(), e);
+        } catch (Exception e) {
+            throw new RuntimeException("Error binding app-level env dependencies " + app.getAppName(), e);
         }
 
     }
 
-
     private void unregisterAppLevelDependencies(Application app) {
-
-         if( app != null ) {
+        if (app != null) {
             try {
                 compEnvManager.unbindFromComponentNamespace(app);
-            } catch(Exception e) {
-                _logger.log(Level.FINE, "Exception unbinding app objects", e);
+            } catch (Exception e) {
+                _logger.log(FINE, "Exception unbinding app objects", e);
             }
-         }
-     }
-
-
+        }
+    }
 
     private void loadManagedBeans(ApplicationInfo appInfo) {
-
         Application app = appInfo.getMetaData(Application.class);
 
-        if( app == null ) {
+        if (app == null) {
             return;
         }
 
         loadManagedBeans(app);
     }
 
+    @Override
     public void loadManagedBeans(Application app) {
+        CDIService cdiService = serviceLocator.getService(CDIService.class);
 
-        JCDIService jcdiService = habitat.getService(JCDIService.class);
-
-        for(BundleDescriptor bundle : app.getBundleDescriptors()) {
-
+        for (BundleDescriptor bundle : app.getBundleDescriptors()) {
             if (!bundleEligible(bundle)) {
                 continue;
             }
 
-            boolean isCDIBundle = (jcdiService != null && jcdiService.isJCDIEnabled(bundle));
+            boolean isCDIBundle = cdiService != null && cdiService.isCDIEnabled(bundle);
 
-            for(ManagedBeanDescriptor next : bundle.getManagedBeans()) {
+            for (ManagedBeanDescriptor managedBeanDescriptor : bundle.getManagedBeans()) {
 
                 try {
-                    Set<String> interceptorClasses = next.getAllInterceptorClasses();
+                    Set<String> interceptorClasses = managedBeanDescriptor.getAllInterceptorClasses();
+                    Class<?> targetClass = bundle.getClassLoader().loadClass(managedBeanDescriptor.getBeanClassName());
 
-
-                    Class targetClass = bundle.getClassLoader().loadClass(next.getBeanClassName());
                     InterceptorInfo interceptorInfo = new InterceptorInfo();
                     interceptorInfo.setTargetClass(targetClass);
                     interceptorInfo.setInterceptorClassNames(interceptorClasses);
-                    interceptorInfo.setAroundConstructInterceptors
-                            (next.getAroundConstructCallbackInterceptors(targetClass,
-                                     getConstructor(targetClass, isCDIBundle)));
-                    interceptorInfo.setPostConstructInterceptors
-                            (next.getCallbackInterceptors(LifecycleCallbackDescriptor.CallbackType.POST_CONSTRUCT));
-                      interceptorInfo.setPreDestroyInterceptors
-                            (next.getCallbackInterceptors(LifecycleCallbackDescriptor.CallbackType.PRE_DESTROY));
-                    if( next.hasAroundInvokeMethod() ) {
+                    interceptorInfo.setAroundConstructInterceptors(managedBeanDescriptor.getAroundConstructCallbackInterceptors(targetClass,
+                            getConstructor(targetClass, isCDIBundle)));
+                    interceptorInfo.setPostConstructInterceptors(managedBeanDescriptor.getCallbackInterceptors(POST_CONSTRUCT));
+                    interceptorInfo.setPreDestroyInterceptors(managedBeanDescriptor.getCallbackInterceptors(PRE_DESTROY));
+
+                    if (managedBeanDescriptor.hasAroundInvokeMethod()) {
                         interceptorInfo.setHasTargetClassAroundInvoke(true);
                     }
 
-                    Map<Method, List> interceptorChains = new HashMap<Method, List>();
-                    for(Method m : targetClass.getMethods()) {
-                        interceptorChains.put(m, next.getAroundInvokeInterceptors(m) );
+                    Map<Method, List> interceptorChains = new HashMap<>();
+                    for (Method targetMethod : targetClass.getMethods()) {
+                        interceptorChains.put(targetMethod, managedBeanDescriptor.getAroundInvokeInterceptors(targetMethod));
                     }
 
                     interceptorInfo.setAroundInvokeInterceptorChains(interceptorChains);
@@ -226,21 +209,19 @@ public class ManagedBeanManagerImpl implements ManagedBeanManager, PostConstruct
                     // TODO can optimize this out for the non-JAXRS, non-application specified interceptor case
                     interceptorInfo.setSupportRuntimeDelegate(true);
 
-                    JavaEEInterceptorBuilderFactory interceptorBuilderFactory =
-                            habitat.getService(JavaEEInterceptorBuilderFactory.class);
+                    JavaEEInterceptorBuilderFactory interceptorBuilderFactory = serviceLocator
+                            .getService(JavaEEInterceptorBuilderFactory.class);
 
                     JavaEEInterceptorBuilder builder = interceptorBuilderFactory.createBuilder(interceptorInfo);
 
-                    next.setInterceptorBuilder(builder);
+                    managedBeanDescriptor.setInterceptorBuilder(builder);
 
+                    compEnvManager.bindToComponentNamespace(managedBeanDescriptor);
 
-                    compEnvManager.bindToComponentNamespace(next);
+                    String jndiName = managedBeanDescriptor.getGlobalJndiName();
+                    ManagedBeanNamingProxy namingProxy = new ManagedBeanNamingProxy(managedBeanDescriptor, serviceLocator);
 
-                    String jndiName = next.getGlobalJndiName();
-                    ManagedBeanNamingProxy namingProxy =
-                        new ManagedBeanNamingProxy(next, habitat);
-
-                    if( processType.isServer() ) {
+                    if (processType.isServer()) {
                         namingManager.publishObject(jndiName, namingProxy, true);
                     } else {
                         // Can't store them in server's global naming service so keep
@@ -248,379 +229,334 @@ public class ManagedBeanManagerImpl implements ManagedBeanManager, PostConstruct
                         appClientManagedBeans.put(jndiName, namingProxy);
                     }
 
-
-                } catch(Exception e) {
-                    throw new RuntimeException("Error binding ManagedBean " + next.getBeanClassName() +
-                    " with name = " + next.getName(), e);
+                } catch (Exception e) {
+                    throw new RuntimeException("Error binding ManagedBean " + managedBeanDescriptor.getBeanClassName() + " with name = "
+                            + managedBeanDescriptor.getName(), e);
                 }
             }
 
-            jcdiManagedBeanInstanceMap.put(bundle,
-                Collections.synchronizedMap(new HashMap<Object, JCDIService.JCDIInjectionContext>()));
+            cdiManagedBeanInstanceMap.put(bundle, synchronizedMap(new HashMap<>()));
         }
 
     }
 
-    private Constructor getConstructor(Class clz, boolean isCDIBundle) throws Exception {
+    private Constructor<?> getConstructor(Class<?> clz, boolean isCDIBundle) throws Exception {
         if (isCDIBundle) {
-            Constructor<?>[] ctors = clz.getDeclaredConstructors();
-            for(Constructor<?> ctor : ctors) {
+            for (Constructor<?> ctor : clz.getDeclaredConstructors()) {
                 if (ctor.getAnnotation(jakarta.inject.Inject.class) != null) {
                     // @Inject constructor
                     return ctor;
                 }
             }
         }
+
         // Not a CDI bundle or no @Inject constructor - use no-arg constructor
         return clz.getConstructor();
     }
 
+    @Override
     public Object getManagedBean(String globalJndiName) throws Exception {
-
         NamingObjectProxy proxy = appClientManagedBeans.get(globalJndiName);
-
-        Object managedBean = null;
-
-        if( proxy != null ) {
-
-            managedBean = proxy.create(new InitialContext());
-
+        if (proxy == null) {
+            return null;
         }
 
-        return managedBean;
+        return proxy.create(new InitialContext());
+
     }
 
     /**
      * Apply a runtime interceptor instance to all managed beans in the given module
+     *
      * @param interceptorInstance
      * @param bundle bundle descripto
      *
      */
+    @Override
     public void registerRuntimeInterceptor(Object interceptorInstance, BundleDescriptor bundle) {
+        for (ManagedBeanDescriptor managedBeanDescriptor : bundle.getManagedBeans()) {
+            JavaEEInterceptorBuilder interceptorBuilder = (JavaEEInterceptorBuilder) managedBeanDescriptor.getInterceptorBuilder();
 
-
-        for(ManagedBeanDescriptor next :  bundle.getManagedBeans()) {
-
-            JavaEEInterceptorBuilder interceptorBuilder = (JavaEEInterceptorBuilder)
-                       next.getInterceptorBuilder();
-
-            interceptorBuilder.addRuntimeInterceptor(interceptorInstance);
-
+            interceptorBuilder.addRuntimeInterceptor(managedBeanDescriptor.getInterceptorBuilder());
         }
-
     }
 
+    @Override
     public void unloadManagedBeans(Application app) {
-
-        for(BundleDescriptor bundle : app.getBundleDescriptors()) {
-
+        for (BundleDescriptor bundle : app.getBundleDescriptors()) {
             if (!bundleEligible(bundle)) {
                 continue;
             }
 
-            Map<Object, JCDIService.JCDIInjectionContext> jcdiInstances =
-                    jcdiManagedBeanInstanceMap.remove(bundle);
+            Map<Object, CDIInjectionContext> cdiInstances = cdiManagedBeanInstanceMap.remove(bundle);
 
-            if( jcdiInstances != null ) {
-                for(JCDIService.JCDIInjectionContext next : jcdiInstances.values()) {
+            if (cdiInstances != null) {
+                for (CDIInjectionContext cdiInjectionContext : cdiInstances.values()) {
                     try {
-                        next.cleanup(true);
-                    } catch(Exception e) {
-                        _logger.log(Level.FINE, "Exception during JCDI cleanup for " + next, e);
+                        cdiInjectionContext.cleanup(true);
+                    } catch (Exception e) {
+                        _logger.log(FINE, "Exception during CDI cleanup for " + cdiInjectionContext, e);
                     }
                 }
             }
 
-            for(ManagedBeanDescriptor next : bundle.getManagedBeans()) {
+            for (ManagedBeanDescriptor managedBeanDescriptor : bundle.getManagedBeans()) {
+                for (Object instance : managedBeanDescriptor.getBeanInstances()) {
 
-                for(Object instance : next.getBeanInstances()) {
-
-                    InterceptorInvoker invoker = (InterceptorInvoker)
-                        next.getSupportingInfoForBeanInstance(instance);
+                    InterceptorInvoker invoker = (InterceptorInvoker) managedBeanDescriptor.getSupportingInfoForBeanInstance(instance);
 
                     try {
                         invoker.invokePreDestroy();
-                    } catch(Exception e) {
-                        _logger.log(Level.FINE, "Managed bean " + next.getBeanClassName() + " PreDestroy", e);
+                    } catch (Exception e) {
+                        _logger.log(FINE, "Managed bean " + managedBeanDescriptor.getBeanClassName() + " PreDestroy", e);
                     }
-
                 }
 
-                com.sun.enterprise.container.common.spi.util.ComponentEnvManager compEnvManager =
-                    habitat.getService(com.sun.enterprise.container.common.spi.util.ComponentEnvManager.class);
+                ComponentEnvManager compEnvManager = serviceLocator.getService(ComponentEnvManager.class);
 
                 try {
-                    compEnvManager.unbindFromComponentNamespace(next);
-                } catch(javax.naming.NamingException ne) {
-                    _logger.log(Level.FINE, "Managed bean " + next.getBeanClassName() + " unbind", ne);
+                    compEnvManager.unbindFromComponentNamespace(managedBeanDescriptor);
+                } catch (javax.naming.NamingException ne) {
+                    _logger.log(FINE, "Managed bean " + managedBeanDescriptor.getBeanClassName() + " unbind", ne);
                 }
 
-                org.glassfish.api.naming.GlassfishNamingManager namingManager =
-                        habitat.getService(org.glassfish.api.naming.GlassfishNamingManager.class);
-                String jndiName = next.getGlobalJndiName();
+                GlassfishNamingManager namingManager = serviceLocator.getService(GlassfishNamingManager.class);
+                String jndiName = managedBeanDescriptor.getGlobalJndiName();
 
-                if( processType.isServer() ) {
+                if (processType.isServer()) {
                     try {
                         namingManager.unpublishObject(jndiName);
-                    } catch(javax.naming.NamingException ne) {
-                        _logger.log(Level.FINE, "Error unpubishing managed bean " +
-                               next.getBeanClassName() + " with jndi name " + jndiName, ne);
+                    } catch (NamingException ne) {
+                        _logger.log(FINE, "Error unpubishing managed bean " + managedBeanDescriptor.getBeanClassName() + " with jndi name "
+                                + jndiName, ne);
                     }
                 } else {
                     appClientManagedBeans.remove(jndiName);
                 }
 
-                next.clearAllBeanInstanceInfo();
-
+                managedBeanDescriptor.clearAllBeanInstanceInfo();
             }
         }
 
     }
 
     private boolean bundleEligible(BundleDescriptor bundle) {
-
-        boolean eligible = false;
-
-        if( processType.isServer() ) {
-
-            eligible = (bundle instanceof WebBundleDescriptor) ||
-                (bundle instanceof EjbBundleDescriptor);
-
-        } else if( processType == ProcessType.ACC ) {
-            eligible = (bundle instanceof ApplicationClientDescriptor);
+        if (processType.isServer()) {
+            return bundle instanceof WebBundleDescriptor || bundle instanceof EjbBundleDescriptor;
         }
 
-        return eligible;
+        if (processType == ProcessType.ACC) {
+            return bundle instanceof ApplicationClientDescriptor;
+        }
+
+        return false;
     }
 
+    @Override
     public <T> T createManagedBean(Class<T> managedBeanClass) throws Exception {
         ManagedBeanDescriptor managedBeanDesc = null;
 
         try {
             BundleDescriptor bundle = getBundle();
             managedBeanDesc = bundle.getManagedBeanByBeanClass(managedBeanClass.getName());
-        } catch(Exception e) {
-            // OK.  Can mean that it's not annotated with @ManagedBean but 299 can handle it.
+        } catch (Exception e) {
+            // OK. Can mean that it's not annotated with @ManagedBean but CDI can handle it.
         }
 
         return createManagedBean(managedBeanDesc, managedBeanClass);
     }
 
+    @Override
     public <T> T createManagedBean(Class<T> managedBeanClass, boolean invokePostConstruct) throws Exception {
-        ManagedBeanDescriptor managedBeanDesc = null;
+        ManagedBeanDescriptor managedBeanDescriptor = null;
 
         try {
-            BundleDescriptor bundle = getBundle();
-            managedBeanDesc = bundle.getManagedBeanByBeanClass(managedBeanClass.getName());
-        } catch(Exception e) {
-            // OK.  Can mean that it's not annotated with @ManagedBean but 299 can handle it.
+            managedBeanDescriptor = getBundle().getManagedBeanByBeanClass(managedBeanClass.getName());
+        } catch (Exception e) {
+            // OK. Can mean that it's not annotated with @ManagedBean but CDI can handle it.
         }
 
-        return createManagedBean(managedBeanDesc, managedBeanClass, invokePostConstruct);
+        return createManagedBean(managedBeanDescriptor, managedBeanClass, invokePostConstruct);
     }
 
     /**
      *
-     * @param desc can be null if JCDI enabled bundle.
+     * @param managedBeanDescriptor can be null if CDI enabled bundle.
      * @param managedBeanClass
      * @return
      * @throws Exception
      */
-    public <T> T createManagedBean(ManagedBeanDescriptor desc, Class<T> managedBeanClass) throws Exception {
-
-        JCDIService jcdiService = habitat.getService(JCDIService.class);
+    @SuppressWarnings("unchecked")
+    @Override
+    public <T> T createManagedBean(ManagedBeanDescriptor managedBeanDescriptor, Class<T> managedBeanClass) throws Exception {
+        CDIService cdiService = serviceLocator.getService(CDIService.class);
 
         BundleDescriptor bundleDescriptor = null;
 
-        if( desc == null ) {
+        if (managedBeanDescriptor == null) {
             bundleDescriptor = getBundle();
         } else {
-            bundleDescriptor = desc.getBundleDescriptor();
+            bundleDescriptor = managedBeanDescriptor.getBundleDescriptor();
         }
 
-        if( bundleDescriptor == null ) {
-            throw new IllegalStateException
-                ("Class " + managedBeanClass + " is not a valid EE ManagedBean class");
+        if (bundleDescriptor == null) {
+            throw new IllegalStateException("Class " + managedBeanClass + " is not a valid EE ManagedBean class");
         }
 
         T callerObject = null;
 
-        if( (jcdiService != null) && jcdiService.isJCDIEnabled(bundleDescriptor)) {
+        if (cdiService != null && cdiService.isCDIEnabled(bundleDescriptor)) {
 
-            // Have 299 create, inject, and call PostConstruct on managed bean
+            // Have CDI create, inject, and call PostConstruct on managed bean
 
-            JCDIService.JCDIInjectionContext jcdiContext =
-                jcdiService.createManagedObject(managedBeanClass, bundleDescriptor);
-            callerObject = (T) jcdiContext.getInstance();
+            CDIInjectionContext<T> cdiContext = cdiService.createManagedObject(managedBeanClass, bundleDescriptor);
+            callerObject = cdiContext.getInstance();
 
             // Need to keep track of context in order to destroy properly
-            Map<Object, JCDIService.JCDIInjectionContext> bundleNonManagedObjs =
-                jcdiManagedBeanInstanceMap.get(bundleDescriptor);
-            bundleNonManagedObjs.put(callerObject, jcdiContext);
+            Map<Object, CDIInjectionContext> bundleNonManagedObjs = cdiManagedBeanInstanceMap.get(bundleDescriptor);
+            bundleNonManagedObjs.put(callerObject, cdiContext);
 
         } else {
+            JavaEEInterceptorBuilder interceptorBuilder = (JavaEEInterceptorBuilder) managedBeanDescriptor.getInterceptorBuilder();
 
-
-            JavaEEInterceptorBuilder interceptorBuilder = (JavaEEInterceptorBuilder)
-                desc.getInterceptorBuilder();
-
-            InterceptorInvoker interceptorInvoker =
-                    interceptorBuilder.createInvoker(null);
+            InterceptorInvoker interceptorInvoker = interceptorBuilder.createInvoker(null);
 
             // This is the object passed back to the caller.
             callerObject = (T) interceptorInvoker.getProxy();
 
-            Object[] interceptorInstances = interceptorInvoker.getInterceptorInstances();
-
             // Inject interceptor instances
-            for(int i = 0; i < interceptorInstances.length; i++) {
-                inject(interceptorInstances[i], desc);
+            for (Object interceptorInstance : interceptorInvoker.getInterceptorInstances()) {
+                inject(interceptorInstance, managedBeanDescriptor);
             }
 
             interceptorInvoker.invokeAroundConstruct();
 
             // This is the managed bean class instance
             Object managedBean = interceptorInvoker.getTargetInstance();
-
-            inject(managedBean, desc);
-
+            inject(managedBean, managedBeanDescriptor);
             interceptorInvoker.invokePostConstruct();
 
-            desc.addBeanInstanceInfo(managedBean, interceptorInvoker);
-
+            managedBeanDescriptor.addBeanInstanceInfo(managedBean, interceptorInvoker);
         }
 
         return callerObject;
-
     }
 
     /**
      *
-     * @param desc can be null if JCDI enabled bundle.
+     * @param managedBeanDescriptor can be null if CDI enabled bundle.
      * @param managedBeanClass
      * @param invokePostConstruct
      * @return
      * @throws Exception
      */
-    public <T> T createManagedBean(ManagedBeanDescriptor desc, Class<T> managedBeanClass,
-        boolean invokePostConstruct) throws Exception {
-
-        JCDIService jcdiService = habitat.getService(JCDIService.class);
+    @Override
+    public <T> T createManagedBean(ManagedBeanDescriptor managedBeanDescriptor, Class<T> managedBeanClass, boolean invokePostConstruct)
+            throws Exception {
+        CDIService cdiService = serviceLocator.getService(CDIService.class);
 
         BundleDescriptor bundleDescriptor = null;
 
-        if( desc == null ) {
+        if (managedBeanDescriptor == null) {
             bundleDescriptor = getBundle();
         } else {
-            bundleDescriptor = desc.getBundleDescriptor();
+            bundleDescriptor = managedBeanDescriptor.getBundleDescriptor();
         }
 
-        if( bundleDescriptor == null ) {
-            throw new IllegalStateException
-                ("Class " + managedBeanClass + " is not a valid EE ManagedBean class");
+        if (bundleDescriptor == null) {
+            throw new IllegalStateException("Class " + managedBeanClass + " is not a valid EE ManagedBean class");
         }
 
         T callerObject = null;
 
-        if( (jcdiService != null) && jcdiService.isJCDIEnabled(bundleDescriptor)) {
+        if ((cdiService != null) && cdiService.isCDIEnabled(bundleDescriptor)) {
 
-            // Have 299 create, inject, and call PostConstruct (if desired) on managed bean
+            // Have CDI create, inject, and call PostConstruct (if desired) on managed bean
 
-            JCDIService.JCDIInjectionContext jcdiContext =
-                jcdiService.createManagedObject(managedBeanClass, bundleDescriptor, invokePostConstruct);
-            callerObject = (T) jcdiContext.getInstance();
+            CDIInjectionContext<T> cdiContext = cdiService.createManagedObject(managedBeanClass, bundleDescriptor, invokePostConstruct);
+            callerObject = cdiContext.getInstance();
             // Need to keep track of context in order to destroy properly
-            Map<Object, JCDIService.JCDIInjectionContext> bundleNonManagedObjs =
-                jcdiManagedBeanInstanceMap.get(bundleDescriptor);
-            bundleNonManagedObjs.put(callerObject, jcdiContext);
+            Map<Object, CDIInjectionContext> bundleNonManagedObjs = cdiManagedBeanInstanceMap.get(bundleDescriptor);
+            bundleNonManagedObjs.put(callerObject, cdiContext);
 
         } else {
-
-
-            JavaEEInterceptorBuilder interceptorBuilder = (JavaEEInterceptorBuilder)
-                desc.getInterceptorBuilder();
+            JavaEEInterceptorBuilder interceptorBuilder = (JavaEEInterceptorBuilder) managedBeanDescriptor.getInterceptorBuilder();
 
             // This is the managed bean class instance
-            T managedBean = managedBeanClass.newInstance();
+            T managedBean = managedBeanClass.getDeclaredConstructor().newInstance();
 
-            InterceptorInvoker interceptorInvoker =
-                    interceptorBuilder.createInvoker(managedBean);
+            InterceptorInvoker interceptorInvoker = interceptorBuilder.createInvoker(managedBean);
 
             // This is the object passed back to the caller.
             callerObject = (T) interceptorInvoker.getProxy();
 
             Object[] interceptorInstances = interceptorInvoker.getInterceptorInstances();
 
-            inject(managedBean, desc);
+            inject(managedBean, managedBeanDescriptor);
 
             // Inject interceptor instances
-            for(int i = 0; i < interceptorInstances.length; i++) {
-                inject(interceptorInstances[i], desc);
+            for (Object interceptorInstance : interceptorInstances) {
+                inject(interceptorInstance, managedBeanDescriptor);
             }
 
             interceptorInvoker.invokePostConstruct();
 
-            desc.addBeanInstanceInfo(managedBean, interceptorInvoker);
-
+            managedBeanDescriptor.addBeanInstanceInfo(managedBean, interceptorInvoker);
         }
 
         return callerObject;
-
     }
 
+    @Override
     public boolean isManagedBean(Object object) {
-
-        JavaEEInterceptorBuilderFactory interceptorBuilderFactory =
-                            habitat.getService(JavaEEInterceptorBuilderFactory.class);
-
-        if (interceptorBuilderFactory != null) {
-            return interceptorBuilderFactory.isClientProxy(object);
-        } else {
+        JavaEEInterceptorBuilderFactory interceptorBuilderFactory = serviceLocator.getService(JavaEEInterceptorBuilderFactory.class);
+        if (interceptorBuilderFactory == null) {
             return false;
         }
 
+        return interceptorBuilderFactory.isClientProxy(object);
     }
 
-    private void inject(Object instance, ManagedBeanDescriptor managedBeanDesc)
-        throws Exception {
+    private void inject(Object instance, ManagedBeanDescriptor managedBeanDesc) throws Exception {
         BundleDescriptor bundle = managedBeanDesc.getBundle();
-        if( (bundle instanceof EjbBundleDescriptor) || (bundle instanceof ApplicationClientDescriptor) ) {
-            injectionMgr.injectInstance(instance, managedBeanDesc.getGlobalJndiName(), false);
+
+        if (bundle instanceof EjbBundleDescriptor || bundle instanceof ApplicationClientDescriptor) {
+            injectionManager.injectInstance(instance, managedBeanDesc.getGlobalJndiName(), false);
         } else {
-            //  Inject instances, but use injection invoker for PostConstruct
-            injectionMgr.injectInstance(instance, (JndiNameEnvironment) bundle, false);
+            // Inject instances, but use injection invoker for PostConstruct
+            injectionManager.injectInstance(instance, (JndiNameEnvironment) bundle, false);
         }
     }
 
-    public void destroyManagedBean(Object managedBean)  {
+    @Override
+    public void destroyManagedBean(Object managedBean) {
         destroyManagedBean(managedBean, true);
     }
 
-    public void destroyManagedBean(Object managedBean, boolean validate)  {
-
+    @Override
+    public void destroyManagedBean(Object managedBean, boolean validate) {
         BundleDescriptor bundle = getBundle();
 
-        JCDIService jcdiService = habitat.getService(JCDIService.class);
+        CDIService cdiService = serviceLocator.getService(CDIService.class);
 
-        if( (jcdiService != null) && jcdiService.isJCDIEnabled(bundle)) {
-            Map<Object, JCDIService.JCDIInjectionContext> bundleNonManagedObjs = jcdiManagedBeanInstanceMap.get(bundle);
-            // in a failure scenario it's possible that bundleNonManagedObjs is null
-            if ( bundleNonManagedObjs == null ) {
+        if (cdiService != null && cdiService.isCDIEnabled(bundle)) {
+            Map<Object, CDIInjectionContext> bundleNonManagedObjs = cdiManagedBeanInstanceMap.get(bundle);
+
+            // In a failure scenario it's possible that bundleNonManagedObjs is null
+            if (bundleNonManagedObjs == null) {
                 if (validate) {
-                    throw new IllegalStateException("Unknown JCDI-enabled managed bean " +
-                                                     managedBean + " of class " + managedBean.getClass());
+                    throw new IllegalStateException(
+                            "Unknown CDI-enabled managed bean " + managedBean + " of class " + managedBean.getClass());
                 }
-                _logger.log(Level.FINE, "Unknown JCDI-enabled managed bean " +
-                            managedBean + " of class " + managedBean.getClass());
+                _logger.log(FINE, "Unknown CDI-enabled managed bean " + managedBean + " of class " + managedBean.getClass());
             } else {
-                JCDIService.JCDIInjectionContext context = bundleNonManagedObjs.remove(managedBean);
-                if( context == null ) {
+                CDIInjectionContext context = bundleNonManagedObjs.remove(managedBean);
+                if (context == null) {
                     if (validate) {
-                        throw new IllegalStateException("Unknown JCDI-enabled managed bean " +
-                                                            managedBean + " of class " + managedBean.getClass());
+                        throw new IllegalStateException(
+                                "Unknown CDI-enabled managed bean " + managedBean + " of class " + managedBean.getClass());
                     }
-                    _logger.log(Level.FINE, "Unknown JCDI-enabled managed bean " +
-                        managedBean + " of class " + managedBean.getClass());
+                    _logger.log(FINE, "Unknown CDI-enabled managed bean " + managedBean + " of class " + managedBean.getClass());
                     return;
                 }
 
@@ -628,74 +564,63 @@ public class ManagedBeanManagerImpl implements ManagedBeanManager, PostConstruct
                 context.cleanup(true);
             }
         } else {
-
             Object managedBeanInstance = null;
 
             try {
-
                 Field proxyField = managedBean.getClass().getDeclaredField("__ejb31_delegate");
 
-                final Field finalF = proxyField;
-                    java.security.AccessController.doPrivileged(
-                    new java.security.PrivilegedExceptionAction() {
-                        public java.lang.Object run() throws Exception {
-                            if( !finalF.isAccessible() ) {
-                                finalF.setAccessible(true);
-                            }
-                            return null;
+                doPrivileged(new java.security.PrivilegedExceptionAction<Object>() {
+                    @Override
+                    public Object run() throws Exception {
+                        if (!proxyField.isAccessible()) {
+                            proxyField.setAccessible(true);
                         }
-                    });
+                        return null;
+                    }
+                });
 
                 Proxy proxy = (Proxy) proxyField.get(managedBean);
 
                 InterceptorInvoker invoker = (InterceptorInvoker) Proxy.getInvocationHandler(proxy);
 
                 managedBeanInstance = invoker.getTargetInstance();
-
-            } catch(Exception e) {
+            } catch (Exception e) {
                 throw new IllegalArgumentException("invalid managed bean " + managedBean, e);
             }
 
-            ManagedBeanDescriptor desc = bundle.getManagedBeanByBeanClass(
-                    managedBeanInstance.getClass().getName());
+            ManagedBeanDescriptor managedBeanDescriptor = bundle.getManagedBeanByBeanClass(managedBeanInstance.getClass().getName());
 
-            if( desc == null ) {
-                throw new IllegalStateException("Could not retrieve managed bean descriptor for " +
-                    managedBean + " of class " + managedBean.getClass());
+            if (managedBeanDescriptor == null) {
+                throw new IllegalStateException(
+                        "Could not retrieve managed bean descriptor for " + managedBean + " of class " + managedBean.getClass());
             }
 
-            InterceptorInvoker invoker = (InterceptorInvoker)
-                desc.getSupportingInfoForBeanInstance(managedBeanInstance);
+            InterceptorInvoker invoker = (InterceptorInvoker) managedBeanDescriptor.getSupportingInfoForBeanInstance(managedBeanInstance);
 
             try {
                 invoker.invokePreDestroy();
-            } catch(Exception e) {
-                _logger.log(Level.FINE, "Managed bean " + desc.getBeanClassName() + " PreDestroy", e);
+            } catch (Exception e) {
+                _logger.log(FINE, "Managed bean " + managedBeanDescriptor.getBeanClassName() + " PreDestroy", e);
             }
 
-            desc.clearBeanInstanceInfo(managedBeanInstance);
+            managedBeanDescriptor.clearBeanInstanceInfo(managedBeanInstance);
         }
     }
 
     private BundleDescriptor getBundle() {
-        ComponentEnvManager compEnvManager = habitat.getService(ComponentEnvManager.class);
-
-        JndiNameEnvironment env = compEnvManager.getCurrentJndiNameEnvironment();
+        JndiNameEnvironment jndiNameEnvironment = serviceLocator.getService(ComponentEnvManager.class).getCurrentJndiNameEnvironment();
 
         BundleDescriptor bundle = null;
 
-        if( env instanceof BundleDescriptor) {
-
-           bundle = (BundleDescriptor) env;
-
-        } else if( env instanceof EjbDescriptor ) {
-
-           bundle = (BundleDescriptor)
-                   ((EjbDescriptor)env).getEjbBundleDescriptor().getModuleDescriptor().getDescriptor();
+        if (jndiNameEnvironment instanceof BundleDescriptor) {
+            bundle = (BundleDescriptor) jndiNameEnvironment;
+        } else if (jndiNameEnvironment instanceof EjbDescriptor) {
+            bundle = (BundleDescriptor) ((EjbDescriptor) jndiNameEnvironment).getEjbBundleDescriptor().getModuleDescriptor()
+                    .getDescriptor();
         }
 
-        if( bundle == null ) {
-           throw new IllegalStateException("Invalid context for managed bean creation");
+        if (bundle == null) {
+            throw new IllegalStateException("Invalid context for managed bean creation");
         }
 
         return bundle;
